--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aa62-syntax",
+  "name": "888หวย เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ✔️ ❤️ ♕888",
   "theme": "syntax",
   "version": "0.2.0",
   "description": "888หวย✔️ ❤️ ♕ เว็บหวยออนไลน์ มีหวยให้เล่นครบทุกชนิด ตลอด 24 ชั่วโมง",
